# qdrift

./: README.md  pyproject.toml  test_circuit.qpy
qdrift/: test.py
qdrift/lib/: tool_box.py
qdrift_pai/: config.ini  exact_calc.py  plot_results.py  prepare_circuits.py  run.sh  run_circuits.py  test.py  transpile_circuits.py
qdrift_pai/lib/: qdrift.py  tool_box.py
qdrift_pai/results/exact/: result.json
qdrift_pai/results/qdrift/: circuit0.qasm  circuit1.qasm  circuit10.qasm  circuit11.qasm  circuit12.qasm  circuit13.qasm  circuit14.qasm  circuit15.qasm  circuit16.qasm  circuit17.qasm  circuit18.qasm  circuit19.qasm  circuit2.qasm  circuit20.qasm  circuit21.qasm  circuit22.qasm  circuit23.qasm  circuit24.qasm  circuit25.qasm  circuit26.qasm  circuit27.qasm  circuit28.qasm  circuit29.qasm  circuit3.qasm  circuit30.qasm  circuit31.qasm  circuit32.qasm  circuit33.qasm  circuit34.qasm  circuit35.qasm  circuit36.qasm  circuit37.qasm  circuit38.qasm  circuit39.qasm  circuit4.qasm  circuit40.qasm  circuit41.qasm  circuit42.qasm  circuit43.qasm  circuit44.qasm  (+161 more)
qdrift_pai/results/qdrift/num_steps10/: results.json
qdrift_pai/results/qdrift/num_steps100/: results.json
qdrift_pai/results/qdrift/num_steps1000/: results.json
scale_num_steps/: config.ini  exact_calc.py  plot_results.py  run.sh
simulate_dynamics/: config.ini  exact_calc.py  plot_results.py  prepare_circuits.py  run_circuits.py  transpile_circuits.py
simulate_dynamics/results/exact/: result.json
simulate_dynamics/results/qdrift/num_steps10/: results.json
(+7748 files in other folders)
