[project]
name = "qdrift-pai"
version = "0.1.0"
description = ""
authors = [
    {name = "YutoMorohoshi",email = "u542400c@ecs.osaka-u.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "qiskit (>=2.0.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pylatexenc (>=2.10,<3.0)",
    "qiskit-ibm-runtime (>=0.38.0,<0.39.0)",
    "qiskit-aer (>=0.17.0,<0.18.0)",
    "qiskit-qasm3-import (>=0.5.1,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
